--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "debug": "^4.3.6",
     "express": "^4.19.2",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "mongoose": "^8.5.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
