revisitando os controllers: order

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "debug": "^4.3.6",
     "express": "^4.19.2",
+    "guid": "^0.0.12",
     "http": "^0.0.1-security",
     "mongoose": "^8.5.2"
   },
