--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "http": "^0.0.1-security",
     "mailersend": "^2.2.0",
     "md5": "^2.3.0",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
