--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "azure-storage": "^2.10.7",
     "bcrypt": "^5.1.1",
     "debug": "^4.3.6",
     "dotenv": "^16.4.5",
