--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "guid": "^0.0.12",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mailersend": "^2.2.0",
     "md5": "^2.3.0",
     "mongoose": "^8.5.2",
